<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pvp_end_bg"
    tools:context=".PVPEndActivity" >

    <!-- blue bar up and down -->

    <ImageView
        android:id="@+id/pvp_end_bluebar_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/content_description"
        android:scaleType="fitXY"
        android:src="@drawable/bg_bluebar" />

    <ImageView
        android:id="@+id/pvp_end_bluebar_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/content_description"
        android:scaleType="fitXY"
        android:src="@drawable/bg_bluebar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pvp_end_bluebar_down"
        android:layout_below="@+id/pvp_end_bluebar_up" >

        <TextView
            android:id="@+id/pvp_end_tx_vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/vs"
            android:textColor="@color/red"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/pvp_end_ic_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/pvp_end_tx_vs"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@+id/pvp_end_tx_vs"
            android:contentDescription="@string/content_description"
            android:src="@drawable/pvp_game_ic_girl" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/pvp_end_ic_left"
            android:layout_toLeftOf="@+id/pvp_end_ic_left"
            android:text="@string/temp_name1"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/pvp_end_ic_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/pvp_end_tx_vs"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/pvp_end_tx_vs"
            android:contentDescription="@string/content_description"
            android:src="@drawable/pvp_game_ic_boy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/pvp_end_ic_right"
            android:layout_toRightOf="@+id/pvp_end_ic_right"
            android:text="@string/temp_name2"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/pvp_end_s1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pvp_end_tx_vs"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/pvpend_sentence1"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/pvp_end_s2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pvp_end_s1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/pvpend_sentence2"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/pvp_end_s3"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pvp_end_s2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/pvpend_sentence3"
            android:textColor="@color/red" />
        
        <TextView
            android:id="@+id/pvp_end_tx_win"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/win"
            android:textColor="@drawable/red"
            android:textSize="30sp" />

        <RelativeLayout
            android:id="@+id/pvp_end_buttons_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/pvp_end_s3"
            android:gravity="center" >
            
            <Button 
                android:id="@+id/pvp_end_btn_continue"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/invite_continue"
                android:background="@drawable/blue_button"/>
            
            <Button 
                android:id="@+id/pvp_end_btn_share"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/pvp_end_btn_continue"
                android:layout_marginLeft="10dp"
                android:text="@string/share_record"
                android:background="@drawable/blue_button"/>
            
            <Button 
                android:id="@+id/pvp_end_btn_change"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/pvp_end_btn_share"
                android:layout_marginLeft="10dp"
                android:text="@string/change_opponent"
                android:background="@drawable/blue_button"/>
            
            <Button 
                android:id="@+id/pvp_end_btn_view"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/pvp_end_btn_change"
                android:layout_marginLeft="10dp"
                android:text="@string/view_rank"
                android:background="@drawable/blue_button"/>
            
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>