<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pvp_end_bg" >
    
    <!-- blue bar up and down -->

    <ImageView
        android:id="@+id/pvp_end_bluebar_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/content_description"
        android:scaleType="fitXY"
        android:src="@drawable/bg_bluebar" />

    <ImageView
        android:id="@+id/pvp_end_bluebar_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/content_description"
        android:scaleType="fitXY"
        android:src="@drawable/bg_bluebar" />
    
    <TextView
            android:id="@+id/pvc_end_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:text="@string/pvcend_sentence"
            android:textColor="@color/red" />

    <Button
        android:id="@+id/pvc_end_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pvc_end_s"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blue_button"
        android:text="@string/pvcend_continue" />

</RelativeLayout>
