<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >
    

    <!-- blue bar up and down -->

    <ImageView
        android:id="@+id/pvp_modify_bluebar_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/content_description"
        android:scaleType="fitXY"
        android:src="@drawable/bg_bluebar" />
    
    <ImageView
        android:id="@+id/pvp_modify_bluebar_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/content_description"
        android:scaleType="fitXY"
        android:src="@drawable/bg_bluebar" />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@id/pvp_modify_bluebar_up"
        android:layout_centerHorizontal="true"
        android:text="@string/hero_profile"
        android:gravity="center_vertical"
        android:textColor="@color/white"/>
    

    
    <!-- background -->
    
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:contentDescription="@string/content_description"
        android:layout_below="@id/pvp_modify_bluebar_up"
        android:layout_above="@id/pvp_modify_bluebar_down"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/bg_modify"/>
    
    <Button
        android:id="@+id/pvp_modify_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/pvp_modify_bluebar_down"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/blue_button"
        android:textSize="14sp" 
        android:onClick="beginModify"/>


    
    <!-- form below -->
    
    <ImageView 
        android:id="@+id/pvp_modify_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/pvp_modify_bluebar_up"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/photo_girl1"
        android:onClick="goChoosePhoto"/>
    
    <TextView 
        android:id="@+id/pvp_modify_photo_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/pvp_modify_photo"
        android:layout_alignBottom="@id/pvp_modify_photo"
        android:layout_marginLeft="10dp"
        android:text="@string/modify_photo"
        android:textColor="@color/black"
        android:visibility="invisible"/>
    
    <ImageView
        android:id="@+id/pvp_modify_tixiao"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/pvp_modify_bluebar_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/content_description" />
    
    <RelativeLayout
        android:id="@+id/pvp_modify_account_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/pvp_modify_btn"
        android:layout_below="@+id/pvp_modify_tixiao"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_rectangle"
        android:padding="10dp" >

        <TextView
            android:id="@+id/pvp_modify_username_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/account"
            android:textColor="#1d1d1d"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/pvp_modify_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/pvp_modify_username_textview"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/enter_username"
            android:inputType="text"
            android:maxLength="60"
            android:maxLines="1"
            android:textColor="#1d1d1d"
            android:textColorHint="#666666"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pvp_nickname_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pvp_modify_btn"
        android:layout_alignTop="@id/pvp_modify_account_area"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:background="@drawable/round_rectangle"
        android:padding="10dp" >

        <TextView
            android:id="@+id/pvp_modify_nickname_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/nickname"
            android:textColor="#1d1d1d"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/pvp_modify_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/pvp_modify_nickname_textview"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/set_nickname"
            android:inputType="text"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="#1d1d1d"
            android:textColorHint="#666666"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pvp_modify_pass_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pvp_modify_account_area"
        android:layout_alignRight="@+id/pvp_modify_account_area"
        android:layout_below="@+id/pvp_modify_account_area"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_rectangle"
        android:padding="10dp" >

        <TextView
            android:id="@+id/pvp_modify_password_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/password"
            android:textColor="#1d1d1d"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/pvp_modify_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/pvp_modify_password_textview"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/set_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="#1d1d1d"
            android:textColorHint="#666666"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pvp_modify_college_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pvp_nickname_area"
        android:layout_alignRight="@+id/pvp_nickname_area"
        android:layout_alignTop="@+id/pvp_modify_pass_area"
        android:background="@drawable/round_rectangle"
        android:padding="10dp" >

        <TextView
            android:id="@+id/pvp_modify_college_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/college"
            android:textColor="#1d1d1d"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/pvp_modify_college"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/pvp_modify_college_textview"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/modify_college"
            android:inputType="text"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="#1d1d1d"
            android:textColorHint="#666666"
            android:textSize="14sp" />
    </RelativeLayout>
    
</RelativeLayout>
