<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/white">
    
    <!-- blue bar up and down -->

 <ImageView
        android:id="@+id/pvp_modify_photo_bluebar_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/content_description"
        android:scaleType="fitXY"
        android:src="@drawable/bg_bluebar" />
    
    <ImageView
        android:id="@+id/pvp_modify_photo_bluebar_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/content_description"
        android:scaleType="fitXY"
        android:src="@drawable/bg_bluebar" />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@id/pvp_modify_photo_bluebar_up"
        android:layout_centerHorizontal="true"
        android:text="@string/choose_photo"
        android:gravity="center_vertical"
        android:textColor="@color/white"/>
    
   <GridView
        android:id="@+id/pvp_modify_photo_gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pvp_modify_photo_bluebar_up"
        android:layout_above="@id/pvp_modify_photo_bluebar_down"
        android:horizontalSpacing="6dp"
        android:numColumns="7"        
        android:padding="20dp"
        android:verticalSpacing="6dp" />
   
   <ImageView
        android:id="@+id/pvp_modify_photo_image"
        android:layout_width="120dp"
        android:layout_height="120dp" 
        android:layout_above="@id/pvp_modify_photo_bluebar_down"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dp"
        android:contentDescription="@string/content_description"/>
   
   <Button
        android:id="@+id/pvp_modify_photo_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/pvp_modify_photo_image"
        android:layout_alignBottom="@id/pvp_modify_photo_bluebar_up"
        android:background="@drawable/blue_button"
        android:text="@string/modify_photo"
        android:textSize="14sp" 
        android:textColor="@color/white"
        android:onClick="goPVPModify"/>
</RelativeLayout>
